<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMessageActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/app_title"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEntry_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textColor="#BD0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/madlib_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/madlib_p1"
        android:textColor="#171717"
        app:layout_constraintBaseline_toBaselineOf="@+id/textEntry_2"
        app:layout_constraintStart_toEndOf="@+id/textEntry_2" />

    <TextView
        android:id="@+id/textEntry_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="TextView"
        android:textColor="#BD0000"
        app:layout_constraintBaseline_toBaselineOf="@+id/textEntry_1"
        app:layout_constraintStart_toEndOf="@+id/textEntry_1" />

    <TextView
        android:id="@+id/textEntry_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="TextView"
        android:textColor="#BD0000"
        app:layout_constraintBaseline_toBaselineOf="@+id/madlib_p1"
        app:layout_constraintStart_toEndOf="@+id/madlib_p1" />

    <TextView
        android:id="@+id/madlib_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/madlib_p2"
        android:textColor="#171717"
        app:layout_constraintBaseline_toBaselineOf="@+id/textEntry_3"
        app:layout_constraintStart_toEndOf="@+id/textEntry_3" />

</androidx.constraintlayout.widget.ConstraintLayout>